# rivebot

./: .gitignore  README.md  TODO.md  pyproject.toml  test_match.json  test_status.json
data/: audit.db
data/brains/: assistant.rive  general.rive  global.rive  konex-sales.rive  konex-support.rive  organized.rive  social-code.rive  talkprep.rive
data/brains/_common/: admin.rive  conversation.rive  firewall.rive  forms.rive  jwlinker.rive  onboarding.rive  system.rive
data/brains/_shared/: 00-config.rive  01-subs-creole.rive  02-subs-english.rive  03-subs-person.rive
rivebot/: __init__.py  engine.py  macro_bridge.py  main.py  siyuan_sync.py
scripts/: bootstrap_siyuan_brains.py
tests/: test_siyuan_sync.py
