[project]
name = "rivebot"
version = "0.1.0"
description = "Standalone RiveScript brain service for AI Gateway pre-LLM intent matching"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.128.0",
    "uvicorn>=0.40.0",
    "httpx>=0.27.0",
    "watchdog>=4.0.0",
    "python-dotenv>=1.2.1",
    "loguru>=0.7.3",
    "rivescript @ git+https://github.com/deldesir/rivescript-python.git@master"
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["rivebot*"]
